--- a/info/static/news/css/main.css
+++ b/info/static/news/css/main.css
@@ -605,12 +605,12 @@ body{
     font-size: 16px;
     line-height: 28px;
     margin-bottom: 30px;
-    text-align: justify
+    text-align: justify;
 }
 
 
 .collection{
-    display:inline-block;;
+    display:block;;
     width:98px;
     line-height:34px;
     text-indent:45px;
@@ -618,7 +618,7 @@ body{
     color:#3791ef;
     border-radius:4px;
     font-size:14px;
-    margin:0px 5px;
+    margin:0px auto;
     background:url(../images/collect_icons.png) 21px 7px no-repeat;
     overflow:hidden;
 }
@@ -655,13 +655,13 @@ body{
 
 
 .collected{
-    display:inline-block;
+    display:block;
     width:100px;
     height:36px;
     color:#666;
     border-radius:4px;
     font-size:14px;
-    margin:0px 5px;
+    margin:0px auto;
     background:url(../images/collect_icons.png) 15px -73px no-repeat #e6e6e6;
     position:relative;
     overflow:hidden;
