--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -35,7 +35,7 @@
             {% if data.user_info %}
                 <div class="user_login fr">
                     <img src="../../static/news/images/person01.png" class="lgin_pic">
-                    <a href="#">{{ data.user_info.nick_name }}</a>
+                    <a href="user/info">{{ data.user_info.nick_name }}</a>
                     <a href="javascript:;" onclick="logout()">退出</a>
                 </div>
             {% else %}
