--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -2,46 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>
-    {% block titleBlock %}
+    <title>{% block titleBlock %}
 
-    {% endblock %}
-    </title>
+    {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="../../static/news/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">
     <script type="text/javascript" src="../../static/news/js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="../../static/news/js/main.js"></script>
+
     {% block jsBlock %}
 
     {% endblock %}
-{#    <script type="text/javascript" src="../../static/news/js/index.js"></script>#}
+
+
 </head>
 <body>
     <div class="header_con">
         <div class="header">
             <a href="/" class="logo fl"><img src="../../static/news/images/logo.png" alt="logo"></a>
             <ul class="menu fl">
-            {% block categoryBlock %}
-                {% for category in data.categories_list %}
-                    <li class="{% if loop.index == 1 %}active{% endif %}" data-cid="{{ category.id }}">
-                        <a href="javascript:;">{{ category.name }}</a>
-                    </li>
-                {% endfor %}
-            {% endblock %}
+                {% block categoryBlock %}
+                    {% for category in data.category_list %}
+                        <li class="{% if loop.index == 1 %}active{% endif %}" data-cid="{{ category.id }}"><a href="javascript:;">{{ category.name }}</a></li>
+
+                    {% endfor %}
+                {% endblock %}
 
             </ul>
 
-            <!-- 用户登录后显示下面，隐藏上面 -->
+
+            {#  如果用户登录，展示用户的登录信息，否则提供登录注册的入口          #}
             {% if data.user_info %}
+                 <!-- 用户登录后显示下面，隐藏上面 -->
                 <div class="user_login fr">
-                    <img src="../../static/news/images/person01.png" class="lgin_pic">
-                    <a href="user/info">{{ data.user_info.nick_name }}</a>
+{#                    <img src="../../static/news/images/person01.png" class="lgin_pic">#}
+                    <img src="{% if data.user_info.avatar_url %}{{ data.user_info.avatar_url }}{% else %}../../static/news/images/person01.png{% endif %}" class="lgin_pic">
+                    <a href="/user/info">{{ data.user_info.nick_name }}</a>
                     <a href="javascript:;" onclick="logout()">退出</a>
                 </div>
             {% else %}
-                 <div class="user_btns fr">
+
+                <div class="user_btns fr">
                     <a href="javascript:;" class="login_btn">登录</a> / <a href="javascript:;" class="register_btn">注册</a>
                 </div>
+
             {% endif %}
 
         </div>
@@ -53,19 +57,20 @@
         {% endblock %}
 
         <div class="rank_con fr">
-        {% block authorBlock %}
-        
-        {% endblock %}
+            {% block authorBlock %}
+
+            {% endblock %}
+
             <div class="rank_title">
                 <h3>点击排行</h3>
             </div>
             <ul class="rank_list">
-{#                点 击排行#}
+
                 {% for news in data.news_dict_list %}
-                    <li><span class="{{ loop.index | index_class }}">{{ loop.index0 }}</span><a href="/{{ news.id }}">{{ news.title }}</a></li>
+
+                    <li><span class="{{ loop.index | index_class }}">{{ loop.index }}</span><a href="/{{ news.id }}">{{ news.title }}</a></li>
 
                 {% endfor %}
-
 
             </ul>
         </div>
